--- a/style.css
+++ b/style.css
@@ -8,12 +8,28 @@
 a {
   text-decoration: none;
 }
+p {
+  color: rgb(88, 86, 86);
+}
 
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 }
 
+/* Template body */
+
+#signature-body {
+  display: flex;
+  flex-direction: column;
+}
+
+#logoMH { 
+  height: 6rem;
+  width: 8rem;
+}
 .separator {
   margin: 0.5rem;
 }
@@ -37,7 +53,6 @@ body {
   vertical-align: middle;
 }
 
-
 /* Image logos */
 
 #logo-mh {
@@ -48,4 +63,11 @@ body {
 .logo-image {
   width: 25px;
   height: 25px;
+}
+
+/* Inputs */ 
+
+#inputs { 
+  margin: 5rem;
+  align-self: flex-start;
 }
