--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
 #inputs { 
   display: flex;
   flex-direction: column;
-  margin: 5rem;
-  align-self: flex-start;
+  margin-top: 5rem;
 }
 
 #inputs input { 
